# 2v2pl

./: CMakeLists.txt  README.md  schedule_output.txt
.cache/clangd/index/: database.cpp.659B7D1AC465901E.idx  database.hpp.E76106A6F4E5D528.idx  main.cpp.ECCBF28E2B278E08.idx  object.cpp.5B002FA3F8887A66.idx  object.hpp.E8C70F222C5BBAF4.idx  object_lock_info.cpp.8C5BB687B2AD3D63.idx  object_lock_info.hpp.50E4F6D85187EB96.idx  parser.cpp.5FA1A2DD620FB74A.idx  transaction.cpp.091F3552273FDEA2.idx  transaction.hpp.353631BE1414FC7C.idx  uids.hpp.4BCFDC1AFC88A042.idx
database/: CMakeLists.txt  README.md
database/include/: database.hpp  lock_types.hpp  object.hpp  object_lock_info.hpp  operation.hpp  transaction.hpp  uids.hpp
database/src/: database.cpp  lock_types.cpp  object.cpp  operation.cpp  transaction.cpp
main/: CMakeLists.txt  main.cpp
parser/: CMakeLists.txt  README.md
parser/include/: parser.hpp
parser/src/: parser.cpp
scheduler/: CMakeLists.txt  README.md
scheduler/include/: scheduler.hpp  wait_graph.hpp
scheduler/src/: scheduler.cpp  wait_graph.cpp
